syntax = "proto3";
package kira.gov;

import "gogoproto/gogo.proto";
import "permission.proto";

option go_package = "github.com/KiraCore/sekai/x/gov/types";

message NetworkActor {
  bytes address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  repeated uint64 roles = 2;
  uint32 status = 3;
  repeated uint32 votes = 4;
  Permissions permissions = 5;
  uint64 skin = 6;
}
