syntax = "proto3";
package kira.upgrade;

import "gogoproto/gogo.proto";
import "kira/upgrade/upgrade.proto";

option go_package = "github.com/KiraCore/sekai/x/upgrade/types";

message Plan {
  string name = 1;
  repeated Resource resources = 2 [ (gogoproto.nullable) = false ];
  int64 upgrade_time = 3;
  string rollback_checksum = 4;
  int64 max_enrolment_duration = 5;
  bool instate_upgrade = 6; // if it's set to false, chain is always halted
  bool reboot_required = 7; // only used by Kira Manager to check
}
